<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">


    <com.android.deskclock.customview.UselessToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:left_text="@string/select_back"
        app:title="@string/add_edit_remind_action" />

    <RelativeLayout
        android:id="@+id/select_alarm"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ex_margin"
            android:text="@string/remind_action_alarm"
            android:textSize="@dimen/notification_label" />

        <ImageView
            android:id="@+id/is_remind_action_alarm"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/ex_margin"
            android:scaleType="centerInside"
            android:src="@drawable/week_selected"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_vibration"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/default_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ex_margin"
            android:text="@string/remind_action_vibration"
            android:textSize="@dimen/notification_label" />

        <ImageView
            android:id="@+id/is_remind_action_vibration"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/ex_margin"
            android:scaleType="centerInside"
            android:src="@drawable/week_selected"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>