<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_dark_background"
    android:clickable="true"
    android:orientation="vertical">

    <com.android.deskclock.customview.UselessToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/app_item_background"
        app:layout_constraintTop_toTopOf="parent"
        app:left_text="@string/select_back"
        app:title="@string/add_edit_label" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/app_item_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ex_margin"
            android:layout_toStartOf="@id/edit_label_clear"
            android:autoSizeMaxTextSize="@dimen/notification_app_name"
            android:autoSizeMinTextSize="@dimen/notification_label"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/label_hint" />

        <ImageView
            android:id="@+id/edit_label_clear"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/default_margin"
            android:scaleType="centerInside"
            android:src="@drawable/edit_label_clear" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>