<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_dark_background"
    android:clickable="true"
    android:orientation="vertical">

    <com.android.deskclock.customview.UselessToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/app_item_background"
        app:left_text="@string/select_back"
        app:title="@string/is_repeat" />

    <RelativeLayout
        android:id="@+id/select_monday"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="80dp"
        android:background="@color/app_item_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ex_margin"
            android:text="@string/select_mon"
            android:textSize="@dimen/notification_label" />

        <ImageView
            android:id="@+id/weekday_selected_mon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/ex_margin"
            android:scaleType="centerInside"
            android:src="@drawable/week_selected"
            android:visibility="gone" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line" />
    <RelativeLayout
        android:id="@+id/select_tuesday"
        android:layout_width="match_parent"
        android:layout_height="36dp"

        android:background="@color/app_item_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ex_margin"
            android:text="@string/select_tues"
            android:textSize="@dimen/notification_label" />

        <ImageView
            android:id="@+id/weekday_selected_tues"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/ex_margin"
            android:scaleType="centerInside"
            android:src="@drawable/week_selected"
            android:visibility="gone" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line" />
    <RelativeLayout
        android:id="@+id/select_wednesday"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/app_item_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ex_margin"
            android:text="@string/select_wed"
            android:textSize="@dimen/notification_label" />

        <ImageView
            android:id="@+id/weekday_selected_wed"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/ex_margin"
            android:scaleType="centerInside"
            android:src="@drawable/week_selected"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line" />

    <RelativeLayout
        android:id="@+id/select_thursday"
        android:layout_width="match_parent"
        android:layout_height="36dp"

        android:background="@color/app_item_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ex_margin"
            android:text="@string/select_thur"
            android:textSize="@dimen/notification_label" />

        <ImageView
            android:id="@+id/weekday_selected_thur"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/ex_margin"
            android:scaleType="centerInside"
            android:src="@drawable/week_selected"
            android:visibility="gone" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line" />
    <RelativeLayout
        android:id="@+id/select_friday"
        android:layout_width="match_parent"
        android:layout_height="36dp"

        android:background="@color/app_item_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ex_margin"
            android:text="@string/select_fri"
            android:textSize="@dimen/notification_label" />

        <ImageView
            android:id="@+id/weekday_selected_fri"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/ex_margin"
            android:scaleType="centerInside"
            android:src="@drawable/week_selected"
            android:visibility="gone" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line" />
    <RelativeLayout
        android:id="@+id/select_saturday"
        android:layout_width="match_parent"
        android:layout_height="36dp"

        android:background="@color/app_item_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ex_margin"
            android:text="@string/select_sat"
            android:textSize="@dimen/notification_label" />

        <ImageView
            android:id="@+id/weekday_selected_sat"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/ex_margin"
            android:scaleType="centerInside"
            android:src="@drawable/week_selected"
            android:visibility="gone" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line" />
    <RelativeLayout
        android:id="@+id/select_sunday"
        android:layout_width="match_parent"
        android:layout_height="36dp"

        android:background="@color/app_item_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ex_margin"
            android:text="@string/select_sun"
            android:textSize="@dimen/notification_label" />

        <ImageView
            android:id="@+id/weekday_selected_sun"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/ex_margin"
            android:scaleType="centerInside"
            android:src="@drawable/week_selected"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>